@@ -4,6 +4,8 @@ Post-v3.3.0
      * Conntrack now supports 'random' flag for selecting ports in a range
        while natting and 'persistent' flag for selection of the IP address
        from a range.
+   - Linux TC offload:
+     * Add support for offloading sflow via tc sample.
 
 
 v3.3.0 - 16 Feb 2024
